--- a/Frontend/src/styles/Common.module.css
+++ b/Frontend/src/styles/Common.module.css
@@ -1,5 +1,5 @@
 .pidForm {
-    display: flex;
+    /* display: flex;
     align-items: center;
     justify-content: center;
     height:fit-content;
@@ -7,8 +7,12 @@
     vertical-align: middle;
     position: fixed;
   top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
+  left: 50%; */
+  display: flex;
+  height: 100vh;
+  width: 100vw; 
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   }
 
