--- a/Frontend/src/styles/globals.css
+++ b/Frontend/src/styles/globals.css
@@ -8,4 +8,10 @@ button {
 
 html {
     background-color: orange;
+    display: flex;
+    height: 100vh;
+    width: 100vw; 
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
