--- a/Frontend/src/styles/end.module.css
+++ b/Frontend/src/styles/end.module.css
@@ -84,6 +84,7 @@
   justify-content: center;
   flex-direction: column;
  border-color: rgb(161, 161, 161);
+ background-image: '/pumkin2.jpg';
   border-radius: 30px;
   padding: 10px;
   margin-top: 50px;
@@ -95,4 +96,8 @@
   justify-content: center;
   flex-direction: column;
   text-align: center;
+}
+
+.back {
+  background-image: '/Frontend/public/pumpkin2.jpg';
 }
