confirm styling and stage/status requests for frontend

--- a/Frontend/src/styles/confirm.module.css
+++ b/Frontend/src/styles/confirm.module.css
@@ -31,7 +31,10 @@
 
 .buttonNo {
   font-size: 30px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
   border-radius: 50px;
   cursor: pointer;
   margin: 10px;
