--- a/Frontend/src/styles/landingPage.module.css
+++ b/Frontend/src/styles/landingPage.module.css
@@ -1,9 +1,19 @@
 .title {
-    font-size: 1rem;
+    margin-top: 15%;
+    font-size: 2.5rem;
 }
 
-.header {
-    display: flex;
+.button {
+    margin-top: 15%;
+    font-size: 2.5rem;
+    background-color: #EFA846;
+    border-radius: 2rem;
+    cursor: pointer;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+.container {
     align-items: center;
-    justify-content: center;
+    text-align: center;
 }
