--- a/Frontend/src/styles/confirm.module.css
+++ b/Frontend/src/styles/confirm.module.css
@@ -1,50 +1,44 @@
-.pidForm {
+.container {
   display: flex;
-  height: 100vh;
-  width: 100vw;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  height: 100vh;
   background-color: #575555;
-  padding: 0;
-  margin: -10px;
 }
 
 .popup {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   background-color: white;
-  padding: 100px;
-  border-radius: 50px;
-  box-shadow: -15px 15px #323030;
+  padding: 2rem;
+  border-radius: 2rem;
+  box-shadow: -1.25rem 1.25rem #323030;
 }
 
 .button {
-  font-size: 30px;
+  font-size: 2rem;
   background-color: #EFA846;
   border: white;
-  border-radius: 50px;
+  border-radius: 2rem;
   cursor: pointer;
-  margin: 10px;
+  margin: 1rem;
   text-align: center;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .buttonNo {
-  font-size: 30px;
-  background-color: rgb(255, 255, 255);
+  font-size: 2rem;
   border-color: black;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 50px;
+  border-width: .01rem;
+  border-radius: 2rem;
   cursor: pointer;
-  margin: 10px;
+  margin: 1rem;
   text-align: center;
-  padding-left: 60px;
-  padding-right: 60px;
-}
-
-.buttons {
-  text-align: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .instructions {
