--- a/Frontend/src/styles/statusData.module.css
+++ b/Frontend/src/styles/statusData.module.css
@@ -1,6 +1,8 @@
 .tableCell {
   padding: 10px;
   border-bottom: 1px solid #333;
+  border-right: 1px solid #333;
+  border-left: 1px solid #333;
   color: #b0b0b0;
   background-color: #181818;
 }
