Button and screen updates

--- a/Frontend/src/styles/statusData.module.css
+++ b/Frontend/src/styles/statusData.module.css
@@ -5,6 +5,14 @@
   background-color: #181818;
 }
 
+.confirmed {
+  color: green;
+}
+
+.notConfirmed {
+  color: red;
+}
+
 .greenButton {
   background-color: #28a745;
   color: #fff;
