first iteration with correct logix

--- a/Frontend/src/styles/enterID.module.css
+++ b/Frontend/src/styles/enterID.module.css
@@ -24,7 +24,7 @@
     margin-top: 5%;
     font-size: 2rem;
     text-align: center;
-    background-color: #FBF5EA;
+    background-color: #ffecc8;
     border-radius: 2rem;
     cursor: pointer;
   }
