white admin styling

--- a/Frontend/src/styles/status.module.css
+++ b/Frontend/src/styles/status.module.css
@@ -1,13 +1,13 @@
 .leftPane {
-    background-color: #181818;
-    color: #b0b0b0;
+    /* background-color: #181818;
+    color: #b0b0b0; */
     padding: 10px;
     border-right: 1px solid #333;
   }
   
   .data {
-    background-color: #181818;
-    color: #b0b0b0;
+    /* background-color: #181818;
+    color: #b0b0b0; */
     padding: 10px;
     flex: 1;
   }
