--- a/Frontend/src/styles/statusData.module.css
+++ b/Frontend/src/styles/statusData.module.css
@@ -1,8 +1,7 @@
 .tableCell {
   padding: 10px;
   border: 1px solid #333;
-  color: #b0b0b0;
-  background-color: #181818;
+  background-color: #fff;
 }
 
 .confirmed {
