--- a/Frontend/src/styles/selectData.module.css
+++ b/Frontend/src/styles/selectData.module.css
@@ -3,35 +3,25 @@
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
-    justify-items: center;
 }
 
 .stencil-card {
     background-color: #fff;
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    border-radius: 5px;
+    padding: 10px;
     text-align: center;
-}
-
-.stencil-card img {
-    width: 250px;
-    height: 250px;
-}
-
-.stencil-card .image-container {
-    width: 250px;
-    height: 250px;
-    overflow: hidden;
-    margin: 0 auto;
 }
 
 .stencil-card h3 {
     margin: 10px 0;
     font-size: 1.2rem;
+    font-weight: bold;
 }
 
 .stencil-card p {
     margin: 0;
     color: #666;
+    font-weight: bold;
 }
