--- a/Frontend/src/styles/selectData.module.css
+++ b/Frontend/src/styles/selectData.module.css
@@ -13,6 +13,10 @@
     text-align: center;
 }
 
+.stencilCard:hover iframe {
+    transform: scale(2.5);
+  }
+
 .stencilCard h3 {
     margin: 5px 0;
     font-size: 1.2rem;
