some nav style changes

--- a/Frontend/src/styles/status.module.css
+++ b/Frontend/src/styles/status.module.css
@@ -8,7 +8,7 @@
   .data {
     /* background-color: #181818;
     color: #b0b0b0; */
-    padding: 10px;
+    padding: 0px 10px 0px 10px;
     flex: 1;
   }
   
