--- a/Frontend/src/styles/leftPaneSelect.module.css
+++ b/Frontend/src/styles/leftPaneSelect.module.css
@@ -38,6 +38,22 @@
     color: #fff; 
 }
 
+.weekButton {
+    font-weight: bold;
+    width: 100%;
+    padding: 5px 10px;
+    margin: 2px 2px;
+    border-radius: 20px;
+    border: 1px solid #333;
+    cursor: pointer;
+    transition: 0.3s;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    white-space: normal !important;
+    word-wrap: break-word;
+}
+
 .categoryBlock colgroup {
     min-width: auto !important;
 }
